Added Unknown user image

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -747,6 +747,12 @@ video {
 .pt-4 {
   padding-top: 1rem;
 }
+.pt-8 {
+  padding-top: 2rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
 .text-center {
   text-align: center;
 }
